--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -156,3 +156,67 @@
   display: flex;
   justify-content: space-around;
 }
+
+.comment {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.comment h4,
+.addcomment h4 {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0.3rem;
+}
+
+.comment p {
+  margin: 5px;
+}
+
+.addcomment form {
+  display: flex;
+  flex-direction: column;
+}
+
+.addcomment input {
+  height: 30px;
+  border: 2px solid black;
+  margin: 10px 0;
+  outline: none;
+  padding: 0.5rem;
+  width: 80%;
+}
+
+.addcomment textarea {
+  resize: none;
+  width: 100%;
+  height: 100px;
+  padding: 0.5rem;
+  outline: none;
+  border: 2px solid rgb(64, 64, 64);
+}
+
+.addcomment button {
+  width: 70%;
+  padding: 5px;
+  outline: none;
+}
+
+.comment-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.comment-form input {
+  width: 100%;
+}
+
+#comment-btn {
+  width: 100px;
+  align-self: center;
+  border-radius: 8px;
+}
