--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,10 +17,16 @@
   gap: 10px;
 }
 
+.nav a {
+  color: rgb(127, 74, 193);
+  font-size: 20px;
+}
+
 .nav ul {
   display: flex;
   gap: 10px;
   list-style: none;
+  color: black;
 }
 
 .nav .links2 {
@@ -31,11 +37,16 @@
   text-decoration: none;
 }
 
+.logo img {
+  width: 180px;
+}
+
 .footer {
   border-radius: 8px;
   border-color: black;
   border-style: outset;
   height: 15%;
+  background-color: white;
 }
 
 .footer h3 {
@@ -63,6 +74,10 @@
   width: 25%;
   gap: 15px;
   margin-bottom: 40px;
+
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
 }
 
 .likes {
@@ -103,7 +118,7 @@
   width: 90%;
   height: 100vh;
   margin: 10px auto;
-  padding: 0 16px;
+  padding: 20px 16px;
   border-radius: 16px;
   overflow-y: scroll;
   display: flex;
@@ -147,6 +162,147 @@
 .show-details-2 span {
   min-width: 200px;
 }
+
+.comment {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.comment h4,
+.addcomment h4 {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 500;
+  margin: 0.3rem;
+}
+
+.test {
+  font-size: 20px;
+}
+
+.comment p {
+  margin: 5px;
+}
+
+.addcomment form {
+  display: flex;
+  flex-direction: column;
+}
+
+.addcomment input {
+  height: 30px;
+  border: 2px solid black;
+  margin: 10px 0;
+  outline: none;
+  padding: 0.5rem;
+  width: 80%;
+}
+
+.addcomment textarea {
+  resize: none;
+  width: 100%;
+  height: 100px;
+  padding: 0.5rem;
+  outline: none;
+  border: 2px solid rgb(64, 64, 64);
+}
+
+.addcomment button {
+  width: 70%;
+  padding: 5px;
+  outline: none;
+}
+
+.comment-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.comment-form input {
+  width: 100%;
+}
+
+#name {
+  height: 40px;
+}
+
+#comment-btn {
+  width: 100px;
+  align-self: center;
+  border-radius: 8px;
+}
+
+/* Start */
+svg {
+  position: fixed;
+  height: 100vh;
+  z-index: -100;
+}
+#home {
+  position: fixed;
+  clip-path: url(#cache);
+}
+
+#red {
+  fill: none;
+  opacity: 0.15;
+  stroke: #CE1B5F;
+  stroke-width: 12;
+  stroke-miterlimit:10;
+  animation: show 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out; 
+}
+
+#blue {
+  fill: none;
+  opacity: 0.15;
+  stroke: #06A1C4;
+  stroke-width: 12;
+  stroke-miterlimit:10;
+  animation: show 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+#light-blue {
+  fill: none;
+  opacity: 0.15;
+  stroke: #06A1C4;
+  stroke-width: 6;
+  stroke-miterlimit:10;
+  stroke-dasharray: 200;
+  stroke-dashoffset: 800;
+  animation: draw 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;    
+}
+
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+ }
+    }
+
+@keyframes show {
+  0% {
+    opacity: 0.15;
+ }
+  50% {
+    opacity: 0.2;
+ }
+  100% {
+    opacity: 0.15;
+ }
+    }
+
+
 
 /* Linter Requests: Keep Last */
 .items-list li img,
