--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -147,7 +147,7 @@
   right: 10%;
   top: 4%;
   position: absolute;
-  background-image: url(../images/pop-cancel.png);
+  background-image: url(../assets/close.png);
   background-color: #fff;
   background-repeat: no-repeat;
   background-position: center;
