--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -62,6 +62,22 @@
   padding: 65px 0;
 }
 
+.items-search {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  bottom: 40px;
+}
+
+.items-search-input {
+  width: 35%;
+  height: 40px;
+  border-radius: 40px;
+  border: 3px solid #bdbbbb;
+  outline: none;
+  padding-left: 20px;
+}
+
 .items-list {
   display: flex;
   flex-wrap: wrap;
@@ -109,12 +125,6 @@
 
 .comments {
   width: 50%;
-}
-
-.comments:hover,
-#comment-btn:hover {
-  scale: 0.95;
-  cursor: pointer;
 }
 
 .comments:hover {
@@ -302,4 +312,10 @@ body {
   margin: auto;
   display: flex;
   justify-content: space-around;
+}
+
+.comments:hover,
+#comment-btn:hover {
+  scale: 0.95;
+  cursor: pointer;
 }
